[metadata]
name = eAsistent_scraper
version = 1.5.1
author = PingIsFun
author_email = pingisfun@protonmail.com
description = Scrapes data from easistent.com/urniki/... and returns it as Python dictionary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PingWasFun/eAsistent-scraper
project_urls =
    Bug Tracker = https://github.com/PingWasFun/eAsistent-scraper/issues
    Help = https://github.com/PingWasFun/eAsistent-scraper/discussions/categories/general
license = MIT License
platform = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    beautifulsoup4>=4.10.0
    bs4>=0.0.1
    certifi>=2021.10.8
    charset-normalizer>=2.0.12
    html5lib>=1.1
    idna>=3.3
    requests>=2.27.1
    six >=1.16.0
    soupsieve>=2.3.1
    urllib3>=1.26.8
    webencodings>=0.5.1
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
